feat: setup page routing

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script src="/src/index.ts" type="module"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
